# dr_rafikova_bot

./: .gitignore  Dockerfile  RECURRING_PAYMENT_SETUP.md  SUBSCRIPTION_LOGIC.md  create_subscription_tables.sql  docker-compose.yml  fix_tables.sql  restart.sh
config/: admin_messages.yml  bot_buttons.yml  bot_messages.yml  config.yml  mailling.yml  other.yml
data/: courses.yml
robokassa/: .readthedocs.yaml  LICENSE  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml
robokassa/.github/workflows/: publish.yml  tests.yml
robokassa/docs/: confirmation.md  deactivation.md  faq.md  index.md  links.md  operation.md  recurring_payment.md  robokassa.md
robokassa/examples/: http_async_api.py  link_generator.py  recurring_payment.py
robokassa/robokassa/: __init__.py  client.py  connection.py  exceptions.py  hash.py  jwt.py  merchant.py  payment.py  signature.py  types.py
robokassa/tests/: test_hash.py  test_jwt.py  test_merchant.py  test_open_payment_link.py  test_protected_payment_link.py  test_recurring_payment.py  test_robokassa.py  test_signature.py  test_types.py
src/: bot.py  bot_f.py  config.py  config_old.py  keyboard.py  other_func.py  payment.py  postgresdb.py  requirements.txt  setup.py  subscription_jobs.py  telegram_func.py  telegram_https.py  test.py  test_payment.py  test_subscription_logic.py  webhook_handle.py  webhook_handle_f.py  webhook_handle_old.py
