[tool.poetry]
name = "robokassa"
version = "1.0.6"
description = "Unofficial Robokassa API"
authors = ["Ben Puls <mail@benpuls.ru>"]
repository = "https://github.com/byBenPuls/robokassa"
homepage = "https://github.com/byBenPuls/robokassa"
documentation = "https://robokassa.readthedocs.io/"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
httpx = ">=0.27.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.1"
pymdown-extensions = "^10.6"
mkdocs-material-extensions = "^1.3.1"

[tool.ruff]
lint.extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
